amended controller